feat: create delete user
